# solana-onchain-monitor

./: Cargo.toml
server/: Cargo.toml
server/src/: error.rs  main.rs  stream.rs
shared/src/: model.rs
src/: error.rs  fetch_data.rs  main.rs  model.rs  stream.rs
tests/: token_info_test.rs
